--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.0.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
     "element-ui": "^2.4.6",
-    "@nuxtjs/axios": "^5.0.0"
+    "lodash.clonedeep": "^4.5.0",
+    "moment": "^2.22.2",
+    "nuxt": "^2.0.0",
+    "universal-cookie": "^3.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
